source/css/layout/_overall.scss
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

html,
body {
  height: 100%;
}

body {
  background: linear-gradient(90deg, $bg-secondary-color 10%, $bg-primary-color 90%);
  padding: 20px;
}

// Clearfix group
.group:after {
  content: "";
  display: table;
  clear: both;
}

